# Generated by Django 5.2.4 on 2025-08-02 21:42

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tratamiento', '0004_alter_paciente_identificacion'),
    ]

    operations = [
        migrations.RenameField(
            model_name='medicamento',
            old_name='frecuencia',
            new_name='frecuencia_horas',
        ),
        migrations.AddField(
            model_name='alerta',
            name='tratamiento',
            field=models.ForeignKey(null=True, on_delete=django.db.models.deletion.CASCADE, related_name='%(class)ss', to='tratamiento.tratamiento'),
        ),
        migrations.AddField(
            model_name='recordatorio',
            name='tratamiento',
            field=models.ForeignKey(null=True, on_delete=django.db.models.deletion.CASCADE, related_name='%(class)ss', to='tratamiento.tratamiento'),
        ),
        migrations.DeleteModel(
            name='Paciente',
        ),
    ]
